succAKM/akmLine/common/log/oldLog/runall_p4656.log.error.log
[CRITICAL]2021-03-12 16:16:42,113: import main_button failed, path: button cause a error: name 'Current_loc' is used prior to global declaration (main_button.py, line 83)
pid=4656, ppid=1800, tid=5008
Traceback (most recent call last):
  File "D:\akmLine\common\run_all.py", line 39, in findModule
    __import__(m[1])
  File "D:\akmLine\button\main_button.py", line 83
    global Current_loc
    ^
SyntaxError: name 'Current_loc' is used prior to global declaration

[CRITICAL]2021-03-12 16:16:42,121: import main_button failed, path: button ,cause name 'Current_loc' is used prior to global declaration (main_button.py, line 83)
